gobotany/static/sass/_dkey.scss
/* Dichotomous Key */

/* Definitions */

$logo_width: 450px;

$body_bg: #f0f0c0;
$text_gray: #606060;
$text_green: #519136;
$text_dark_green: #35661C;
$inactive_bg: #d9dbb1;
$active_border: #7abe58;
$active_bg: #b4d57f;

$orange1: #dc9402;
$orange2: #e29b0b;
$orange3: #e39d0e;
$orange4: #f0b448;
$orange5: #f6be59;

$list_popup_border: #acac90;

$orange_gradient: linear-gradient(
    top, $orange1 0%, $orange4 40%, $orange1 100%);

$bright_orange_gradient: linear-gradient(
    top, $orange2 0%, $orange5 32%, $orange5 50%, $orange3 100%);

$disabled_orange_gradient: linear-gradient(
    top, mix($body_bg, $orange2, 75%) 0%, mix($body_bg, $orange5, 75%) 32%,
    mix($body_bg, $orange5, 75%) 50%, mix($body_bg, $orange3, 75%) 100%);

.orange-button {
    min-width: 10em;
    @include border-radius(1em);
    @include single-box-shadow(darken($inactive_bg, 30), 0px, 1px, 4px);
    border: 1px solid $orange1;
    @include background($orange_gradient);
    padding: 0.3em 0.5em;
    color: white;
    text-align: center;
    text-decoration: none;
    font-family: $headings-font;
    font-weight: bold;
    line-height: 1.5em;
    letter-spacing: (1em / 12);
    &:hover {
        @include background($bright_orange_gradient);
    }
    &.disabled {
        border-color: mix($body_bg, $orange2, 75%);
        @include background($disabled_orange_gradient);
    }
}

/* Styles */

#dkey #main {

    .offer-help-aside {
        float: right;
        margin: 1em 1em 0.5em 1em;
        text-align: right;
        color: $text_gray;
        span {
            font-size: $base-font-size;
        }
        a.button {
            display: inline-block;
            margin: 0.8em 1em;
            @extend .orange-button;
            font-weight: normal;
            font-size: $base-font-size;
            text-transform: uppercase;
        }
        select {
            margin: 0.25em 1.0em;
            font-size: 1em * 16px / 12px;
        }
    }

    .groupbox {
        position: relative;
        ul {
            display: none;
            position: absolute;
            z-index: 300;
            right: 10px;
            background-color: white;
            text-align: left;
        }
        li {
            display: block;
            margin: 0;
            border-width: 1px 1px 0px 1px;
            border-style: solid;
            border-color: #bbc6b6;
        }
        li:last-child {
            border-bottom-width: 1px;
        }
        a {
            display: block;
            padding: 1em;
            color: black;
            line-height: 1.25em;
            &:hover {
                background-color: #d3e7b4;
                text-decoration: none;
            }
        }
        b { display: block; }
    }

    h1 {
        margin-bottom: 14px;
    }

    p {
        margin: 1em 0;
        max-width: 48em * (14px / 16px);
        .figure {
            clear: right;
            float: right;
            margin-left: 1em;
            margin-bottom: 1em;
            width: 16em;
            font-size: 100% * 12px/16px;
            a {
                display: block;
                margin-bottom: 0.5em;
                border-bottom: 1px solid black;
                padding-bottom: 0.5em;
            }
            img {
                width: 16em;        /* force thumbnails to a consistent width */
            }
            .number {
                font-weight: bold;
                margin-right: 0.5em;
            }
        }
    }

    p.backlinks {
        margin-top: 1em*(8px/14px);
        margin-bottom: 1em*(9px/14px);
        font-size: $nav-font-size;
        a {
            @include hover-link;
            margin-right: 0.5em;
            color: $text_green;
            font-family: $headings-font;
        }
    }

    a.what-lies-beneath {       /* "See list of 7 species in 1a" */
        @include hover-link;
        color: $text_dark_green;
        font-family: $headings-font;
        font-size:  $base-font-size;
        text-transform: uppercase;
    }
    > a.what-lies-beneath {
        display: block;
        max-width: 47.5em;
        text-align: right;
    }

    ul.couplets {
        margin: 0em;
        max-width: 48em;
        padding: 1em 1em 0 0;
        font-size: $base-font-size;
        line-height: 1.5em;
        ul {                        /* a couplet */
            margin: 0em;
            padding-bottom: 0em;    /* override browser default */
            padding-left: 2%;       /* indent of each level of couplet */
        }
        li {                        /* holds a lead and any <ul> beneath it */
            display: block;
            position: relative;
        }
        .lead {                     /* green box */
            margin: 0em 0em 1em 0em;
            border: 6px solid $inactive_bg;
            @include border-radius(1.5em);
            padding: 1em 1em 1em 1.5em;
            background-color: $inactive_bg;

            &.original-choice:before, &.alt-choice:before {
                display: block;
                position: absolute;
                right: -118px;
                height: 45px;
                width: 110px;
                content: " ";
            }
            &.original-choice:before {
                background: url(/static/images/layout/original-choice.png);
            }
            &.alt-choice:before {
                background: url(/static/images/layout/alternate-choice.png);
            }
        }
        .lead:after {               /* "clear" the float for the button */
            display: block;
            content: " ";
            height: 0px;
            clear: both;
        }
        .letter {                   /* "1a." or "12b." or whatever */
            font-weight: bold;
            padding-right: 0.5em;
        }
        .button-block {             /* contains what-lies-beneath and button */
            float: right;
            margin: 0em 0em 0.4em 1.2em;
            text-align: right;
        }
        a.what-lies-beneath {       /* message that sits above the button */
            display: inline-block;
            /* other styles inherited from a.what-lies-beneath rule above */
        }
        a.button {                  /* big orange button */
            @extend .orange-button;
            display: inline-block;
            font-size:  $base-font-size;
        }
        a.figure-link {             /* clickable figure numbers: [Fig. 3] */
            color: $text_dark_green;
            text-decoration: underline;
            font-weight: bold;
        }
    }
    ul.couplets .chosen {
        border-color: $active_border;
    }
    ul.active > li > .lead,
    ul:target > li > .lead {
        background-color: $active_bg;
        border-color: $active_bg;
    }

    .couplets .gloss {
        border-bottom: none;  /* normally glossary terms are "underlined" */
        color: $text_dark_green;
        cursor: pointer;
    }

    a.show-all-button {
        @extend .orange-button;
        display: inline-block;
        font-size:  $base-font-size;
        font-weight: normal;
    }
    .image-type-selector {
        display: none;  /* once images are loaded, our JS will un-hide */
        max-width: none;
    }
    div.taxon-images {
        margin-left: 1em*12px/16px;
        text-align: center;
        figure {
            display: inline-block;
            margin: 0 1em 1em 0;
            width: 160px;
            vertical-align: top;
        }
        img {
            display: block;
            margin-bottom: 0.4em;
            border: 4px solid black;
            width: 160px;
            height: 149px;
        }
        a {
            font-size: $base-font-size;
            text-decoration: none;
            &:hover { text-decoration: underline; }
        }
    }

    div.shadow {                    /* shadow that hides the whole page */
        display: none;
        position: fixed;
        z-index: 1000;
        top: 0;
        left: 0;
        height: 100%;
        width: 100%;
        background-color: rgba(0,0,0, 0.45);
        text-align: center;
    }
    div.popup {                     /* for displaying quick lists of taxa */
        display: inline-block;
        margin: 5% auto;
        max-height: 90%;
        overflow-y: auto;
        overflow-x: hidden;         /* otherwise scrolling can leak to page */
        border: 0.5em solid $list_popup_border;
        @include border-radius(1em);
        background-color: lighten($body_bg, 5);
        padding: 1em 2em;
        text-align: left;
        font-size: $base-font-size;
        line-height: 1.25em;
        h2 {                        /* "See list of 14 species in 1b" */
            border-bottom: 1px solid $text_green;
            padding-bottom: 0.5em;
            color: $text_green;
            font-family: $headings-font;
            font-weight: normal;

            /* For tall lists a scrollbar appears, and tends to make the last word
               of the title wrap unattractively. */
            white-space: nowrap;
        }
        a {
            @include hover-link;
            color: #000;
            &:hover {
                color: $text_dark_green;
            }
        }
    }

    /* Text styles. */

    .distribution-character {       /* printed book uses a box */
        margin: 0 0.25em;
        border: 1px solid black;
        padding: 0 0.25em;
        font-size: 1em*14px/16px;
    }

} /* end #dkey #main */


/* Begin media queries styles for Dichotomous Key. */

/* Portrait-orientation styles */
@media only screen and (max-width: 400px) {
}
/* Landscape-orientation styles */
@media only screen and (min-width: 401px) and (max-width: 600px) {
}
/* These styles are common to both smartphone widths */
@media only screen and (max-width: 600px) {
    #dkey #main {
        .offer-help-aside {
            float: none;
            text-align: center;
        }
        p.figure {
            float: none;
            display: block;
            margin: 1em auto;
        }
    }
}
/* These styles apply to smartphones and tablets */
@media only screen and (max-width: 1024px) {
}

/* End media queries styles for Dichotomous Key */

